<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Translate Bubble</string>
    <string name="action_settings">Settings</string>

    <string name="noClipboardText">There isn\'t test in clipboard</string>

    <string name="translatedTitle">%1$s translated</string>

    <string name="failedTitle">Failed</string>
    <string name="failedMessage">We have a problem. Try again</string>

    <string name="translating">Translating</string>
    <string name="collapse">Collapse</string>
    <string name="close">Close</string>

    <string name="typeFeedback">Type Feedback</string>

    <string name="notificationTitle">Notification</string>
    <string name="notificationMessage">Launch a System Android Notification</string>

    <string name="bubbleTitle">Bubble</string>
    <string name="bubbleMessage">A bubble over content</string>

    <string name="watchTitle">Watch</string>
    <string name="watchMessage">When I have my Moto360 will be available</string>

    <string name="more">More</string>
    <string name="launchFake">Launch Fake Translation</string>

    <string name="services">Services</string>

    <string name="bing">Bing</string>
    <string name="myMemory">My Memory</string>

    <string name="languages">Languages</string>
    <string name="from">From %1$s</string>
    <string name="to">To %1$s</string>

    <string name="AUTO_DETECT">Autodetect</string>
    <string name="ARABIC">Arabic</string>
    <string name="BULGARIAN">Bulgarian</string>
    <string name="CATALAN">Catalan</string>
    <string name="CHINESE_SIMPLIFIED">Chinese Simplified</string>
    <string name="CHINESE_TRADITIONAL">Chinese Traditional</string>
    <string name="CZECH">Czech</string>
    <string name="DANISH">Danish</string>
    <string name="DUTCH">Dutch</string>
    <string name="ENGLISH">English</string>
    <string name="ESTONIAN">Estonian</string>
    <string name="FINNISH">Finnish</string>
    <string name="FRENCH">French</string>
    <string name="GERMAN">German</string>
    <string name="GREEK">Greek</string>
    <string name="HAITIAN_CREOLE">Haitian Creole</string>
    <string name="HEBREW">Hebrew</string>
    <string name="HINDI">Hindi</string>
    <string name="HMONG_DAW">Hmong Daw</string>
    <string name="HUNGARIAN">Hungarian</string>
    <string name="INDONESIAN">Indonesian</string>
    <string name="ITALIAN">Italian</string>
    <string name="JAPANESE">Japanese</string>
    <string name="KOREAN">Korean</string>
    <string name="LATVIAN">Latvian</string>
    <string name="LITHUANIAN">Lithuanian</string>
    <string name="MALAY">Malay</string>
    <string name="NORWEGIAN">Norwegian</string>
    <string name="PERSIAN">Persian</string>
    <string name="POLISH">Polish</string>
    <string name="PORTUGUESE">Portuguese</string>
    <string name="ROMANIAN">Romanian</string>
    <string name="RUSSIAN">Russian</string>
    <string name="SLOVAK">Slovak</string>
    <string name="SLOVENIAN">Slovenian</string>
    <string name="SPANISH">Spanish</string>
    <string name="SWEDISH">Swedish</string>
    <string name="THAI">Thai</string>
    <string name="TURKISH">Turkish</string>
    <string name="UKRAINIAN">Ukrainian</string>
    <string name="URDU">Urdu</string>
    <string name="VIETNAMESE">Vietnamese</string>

</resources>
